fix compatability issue